feat: add linux cmmand to README.md