@@ -4,3 +4,14 @@
 windows:
 編譯:javac -cp ".;tunetalk\*" tunetalk\*.java
 執行:java --enable-native-access=ALL-UNNAMED -cp ".;tunetalk\*" tunetalk.TuneTalkGUI
+
+## Linux 指令:
+* 編譯
+```bash
+javac -cp ".:tunetalk/*" tunetalk/*.java
+```
+* 執行
+```bash
+java --enable-native-access=ALL-UNNAMED -cp ".:tunetalk/*" tunetalk.TuneTalkGUI
+```
+
